2006-02-11  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Update for 2.14.0 release
	
2006-01-13  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/generic/stock_person.xcf.bz2:
	* 16x16/stock/generic/stock_person.png:
	* 24x24/stock/generic/stock_person.xcf.bz2:
	* 24x24/stock/generic/stock_person.png: 
	* scalable/stock/generic/stock_person.svg: An abstract figure 
		to avoid bug #311844 I'm expecting being labeled racist 
		in the next bugreport.
	
2006-01-09  Jakub Steiner <jimmac@ximian.com>

	* stock_media-shuffle.png: syncing proper names >> now stock_shuffle. 
		Unfortunately thing look for stock_repeat and stock_shuffle.
		
2006-01-03  Rodney Dawes  <dobey@novell.com>

	* Makefile.am:
	* configure.in: Disable the checks for hicolor, as we no longer install
	icons into the hicolor theme, with this commit

	* */*/Makefile.am: Don't install gnome icons to hicolor, to avoid the
	possibility for conflicts, when we move all the gnome icons over to the
	Icon Naming Specification names
	
2006-01-02  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Update for 2.13.4 release

2006-01-02  Jakub Steiner <jimmac@ximian.com>

	* index.theme.in: reverted on Rodney's request

2006-01-02  Jakub Steiner <jimmac@ximian.com>

	* index.theme.in: sort directories by size, ascending.
	
2006-01-02  Jakub Steiner <jimmac@ximian.com>

	* gnome-mime-application-x-gnome-saved-search: saved search
		mimetype. Alex' request.
		
2005-12-22  Rodney Dawes  <dobey@novell.com>

	* index.theme.in: Fix filesystems and mimetypes at 48x48 size to be
	Fixed instead of Scalable (probable fix for bug #315841)
	Change minimum size of scalable directories to 32, so that we don't
	scale the images down too far, for weird smaller sizes

2005-12-13  Sunil Mohan Adapa  <sunil@atc.tcs.co.in>

	* configure.in: Added "te" to ALL_LINGUAS.

2005-11-14  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Update for 2.13.2 release

2005-11-14  Rodney Dawes  <dobey@novell.com>
